--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles/style.css">
 
-    <title>Meu Site</title>
-</head>
-
-<body>
+    <title>Minha Página Pessoal | Início</title>
+  </head>
+  <body>
     <header>
-        <h1>Meu Site</h1>
-        <ul>
-            <li><a href="">Início</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Contato</a></li>
-        </ul>
+      <nav>
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
     </header>
     <main>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro qui esse ex quae aut harum incidunt a ab nam,
-            exercitationem, consequuntur soluta rem maiores eius, officia dolorum nobis quidem dolore.</p>
-        <p>Voluptatem ea incidunt aspernatur quam, perferendis obcaecati natus animi quidem exercitationem ipsam eos rem
-            cum deserunt! Facere nostrum enim repellat doloribus praesentium ea, amet fugiat quisquam facilis explicabo
-            est voluptates!</p>
-        <p>Fugit quasi dignissimos distinctio, provident ipsa, alias debitis officia rerum consequuntur sed voluptatibus
-            modi cum voluptatum explicabo inventore quo! Deleniti, commodi praesentium veritatis sit recusandae quos
-            consequuntur laboriosam odit itaque.</p>
-        <p>Quis laudantium ea quae consequuntur possimus explicabo harum. Quis nihil, cum repudiandae minus aliquid
-            veritatis quaerat omnis quibusdam ipsa eveniet quos temporibus rerum nemo fugiat dolorem nobis totam
-            adipisci animi.</p>
+      <h1>Início</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quas
+        quaerat illo molestias incidunt ratione, hic maiores dicta explicabo
+        facilis suscipit, magni rem odio in quidem similique vel animi. Commodi.
+      </p>
+      <p>
+        Numquam quasi hic ab, amet reprehenderit placeat recusandae nihil quia
+        distinctio odit non exercitationem ad alias ipsa quaerat cumque! Vero,
+        harum culpa consectetur adipisci veniam quibusdam illo consequatur
+        officia ducimus.
+      </p>
+      <p>
+        Repudiandae deleniti excepturi neque repellendus, nesciunt impedit
+        labore, dolorem modi voluptas quos voluptatum, sequi laborum a?
+        Inventore ex, optio quasi sint praesentium aperiam libero placeat,
+        explicabo, enim alias dolorem delectus.
+      </p>
+      <p>
+        Assumenda, placeat eius! Rerum ipsam qui aspernatur vel enim tempore
+        sint impedit consequuntur, odio voluptatum sapiente eligendi iusto quod
+        voluptates iure voluptas commodi nulla praesentium natus ducimus.
+        Perspiciatis, nihil ipsum!
+      </p>
     </main>
-    <footer>
-        Roberto Cunha 2022 Copyright Todos os direitos reservados
-    </footer>
-</body>
-<script>
-    alert("Acesso Negado!");
-</script>
-
+    <footer></footer>
+  </body>
 </html>
